--- a/src/templates/container_image.html
+++ b/src/templates/container_image.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div>
-					<h5 class="pull-left">{{'Image'|translate}} <small>{{project.image}}</small></h5>
+					<h5 class="pull-left">{{'Image'|translate}} <small>{{container.image}}</small></h5>
 					<div class="pull-right">
 						<a class="btn btn-primary" ng-click="ctrl.pullImage()">
 							<i class="fa fa-download"></i>
@@ -13,10 +13,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="row" ng-if="project.runtime.docker.image.history">
+		<div class="row" ng-if="container.runtime.docker.image.history">
 			<div class="col-xs-12">
 				<h5>{{'History'|translate}}</h5>
-				<div ng-repeat="h in project.runtime.docker.image.history" class="row">
+				<div ng-repeat="h in container.runtime.docker.image.history" class="row">
 					<div class="col-xs-2">{{h.Id|limitTo: 12}}</div>
 					<div class="col-xs-2">{{h.Created}}</div>
 					<div class="col-xs-5">{{h.CreatedBy}}</div>
@@ -25,10 +25,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="row" ng-if="project.runtime.docker.image.infos">
+		<div class="row" ng-if="container.runtime.docker.image.infos">
 			<div class="col-xs-12">
 				<h5>{{'Informations'|translate}}</h5>
-				<pre pretty-json="project.runtime.docker.image.infos"></pre>
+				<pre pretty-json="container.runtime.docker.image.infos"></pre>
 			</div>
 		</div>
 	</div>
