Added project manager service Reworked project configuration file loading Renamed containers route, controller and view to project Updated version

--- a/src/templates/container.html
+++ b/src/templates/container.html
@@ -5,7 +5,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<h4>
-						{{container.title}}
+						{{container.name}}
 						<small>{{container.id}}</small>
 						<span class="label label-primary" ng-if="container.runtime.docker.container.infos.State.Running">{{'Running'|translate}}</span>
 						<span class="label label-warning" ng-if="!container.runtime.docker.container.infos.State.Running">{{'Stopped'|translate}}</span>
