--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -4,10 +4,10 @@
 
 		<div class="container-fluid">
 			<div class="row m-t-50">
-				<div class="col-sm-6" ng-repeat="container in containers">
+				<div class="col-sm-6" ng-repeat="container in project.containers">
 					<div class="panel panel-color panel-containers">
 						<div class="panel-body">
-							<h4>{{container.title}}</h4>
+							<h4>{{container.name}}</h4>
 						</div>
 						<div class="panel-footer">
 							<span class="pull-right">
