Removed "start all containers" button in sidebar Removed current file in "open file" menu Cleaned up code

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -58,9 +58,9 @@
 						<i class="fa fa-sitemap fa-fw"></i> {{'Containers'|translate}}
 					</a>
 					<span ng-if="$root.globalConfMgr.valid" class="btn-group btn-group-sm pull-right" style="padding: 10px 15px">
-						<button class="btn btn-primary" ng-click="ctrl.startAll()" title="{{'Start all containers'|translate}}">
+						<!--button class="btn btn-primary" ng-click="ctrl.startAll()" title="{{'Start all containers'|translate}}">
 							<i class="fa fa-play"></i>
-						</button>
+						</button-->
 						<button class="btn btn-warning" ng-click="ctrl.stopAll()" title="{{'Stop all containers'|translate}}">
 							<i class="fa fa-stop"></i>
 						</button>
