Added button to clear log in log view Updated README

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -68,6 +68,10 @@ body {
 	padding: 0;
 }
 
+.page-content .tab .tab-content {
+	position: relative;
+}
+
 .page-content > .full-height {
 	height: calc(100% - 89px)
 }
