--- a/src/css/project.css
+++ b/src/css/project.css
@@ -2,6 +2,13 @@
 	padding-top: 30px;
 }
 
+.clear-log {
+	position: absolute;
+	z-index: 1;
+	top: 10px;
+	right: 10px;
+}
+
 .container .log pre {
 	display: inline-block;
 	font-size: 0.9em;
