Added handling of containers in weird state (409) Added mechanism to enforce presence of files when compiling app Removed ngDialog; now use uibModal Moved to angular 1.4.x

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,9 +1,13 @@
 @font-face {
 	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: normal;
+	font-style: normal;
 	src: url(../fonts/OpenSans-CondLight.ttf);
 }
 
 @font-face {
-	font-family: 'Ubuntu Mono', ;
+	font-family: 'Ubuntu Mono';
+	font-weight: normal;
+	font-style: normal;
 	src: url(../fonts/UbuntuMono-Regular.ttf);
 }
