Changed clear log button icon

--- a/src/templates/container_logs.html
+++ b/src/templates/container_logs.html
@@ -1,6 +1,6 @@
 <div class="clear-log" ng-if="container.runtime.docker.container.log">
 	<a class="btn btn-primary" ng-click="ctrl.clearLog()">
-		<i class="fa fa-times"></i>
+		<i class="fa fa-eraser"></i>
 		{{'Clear log'|translate}}
 	</a>
 </div>
