Switched -danger and -warning colors

--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -7,7 +7,7 @@
 					<h4>
 						{{'Configuration'|translate}}
 						<small ng-if="isConfigurationValid" class="label label-success">{{'valid'|translate}}</small>
-						<small ng-if="!isConfigurationValid" class="label label-danger">{{'invalid'|translate}}</small>
+						<small ng-if="!isConfigurationValid" class="label label-warning">{{'invalid'|translate}}</small>
 					</h4>
 				</div>
 			</div>
