--- a/src/templates/container.html
+++ b/src/templates/container.html
@@ -8,7 +8,7 @@
 						{{container.name}}
 						<small>{{container.id}}</small>
 						<span class="label label-primary" ng-if="container.runtime.docker.container.infos.State.Running">{{'Running'|translate}}</span>
-						<span class="label label-warning" ng-if="!container.runtime.docker.container.infos.State.Running">{{'Stopped'|translate}}</span>
+						<span class="label label-default" ng-if="!container.runtime.docker.container.infos.State.Running">{{'Stopped'|translate}}</span>
 					</h4>
 				</div>
 			</div>
