Added spinner when container is starting or stopping Corrected bug which prevented navbar links to change color when active

--- a/src/css/fontawesome.css
+++ b/src/css/fontawesome.css
@@ -2,3 +2,7 @@
 	-webkit-transform-origin: 50% calc(50% - .5px);
 	transform-origin: 50% calc(50% - .5px);
 }
+
+.fa.text-warning {
+	color: #f0ad4e;
+}
