--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -51,7 +51,7 @@
 		<div class="sidebar-nav navbar-collapse collapse">
 			<ul class="nav" id="side-menu">
 				<li ng-if="project.containers">
-					<a ui-sref="project" class="pull-left" ng-class="{'active': activeState == 'containers'}" title="{{'All containers'|translate}}">
+					<a ui-sref="project" class="pull-left" ng-class="{'active': activeState == 'project'}" title="{{'All containers'|translate}}">
 						<i class="fa fa-sitemap fa-fw"></i> {{'Containers'|translate}}
 					</a>
 					<span ng-if="$root.globalConfMgr.valid" class="btn-group btn-group-sm pull-right" style="padding: 10px 15px">
@@ -65,17 +65,20 @@
 					<div class="clearfix"></div>
 					<ul class="nav nav-second-level">
 						<li ng-repeat="(pid, container) in project.containers">
-							<a ui-sref="container.logs({id: pid})" ng-class="{'active': activecontainer.id == pid}">
+							<a ui-sref="container.logs({id: pid})" ng-class="{'active': activeContainer.id == pid}">
 								<i class="stream stream-module"></i>
 								{{container.name}}
 							</a>
 							<span class="abs-r-15 abs-t-5">
 								<span  ng-if="$root.globalConfMgr.valid && container.runtime.configurationValid">
-									<button ng-if="!container.runtime.docker.container.infos.State" class="btn btn-primary btn-sm" ng-click="ctrl.start(container)" title="{{'Start container'|translate}}">
+									<button ng-if="!container.runtime.docker.container.infos" class="btn btn-primary btn-sm" ng-click="ctrl.start(container)" title="{{'Start container'|translate}}">
 										<i class="fa fa-play"></i>
 									</button>
-									<button ng-if="container.runtime.docker.container.infos.State" class="btn btn-danger btn-sm pull-right" ng-click="ctrl.stop(container)" title="{{'Stop container'|translate}}">
+									<button ng-if="container.runtime.docker.container.infos.State.Running" class="btn btn-danger btn-sm pull-right" ng-click="ctrl.stop(container)" title="{{'Stop container'|translate}}">
 										<i class="fa fa-stop"></i>
+									</button>
+									<button ng-if="container.runtime.docker.container.infos.State.Starting || container.runtime.docker.container.infos.State.Stopping" class="btn btn-default btn-sm pull-right">
+										<i class="fa fa-spinner fa-spin"></i>
 									</button>
 								</span>
 								<i ng-if="!$root.globalConfMgr.valid || !container.runtime.configurationValid" class="fa fa-warning fa-2x text-warning"></i>
