Minor cosmetic change

--- a/src/templates/container_logs.html
+++ b/src/templates/container_logs.html
@@ -4,7 +4,10 @@
 			<pre>{{container.runtime.docker.container.log['stdout']}}</pre>
 		</perfect-scrollbar>
 		<div ng-if="!container.runtime.docker.container.log['stdout']" class="text-empty">
-			<span>{{'The logs are empty'|translate}}</span>
+			<span>
+				<i class="fa fa-eye"></i>
+				{{'The logs are empty'|translate}}
+			</span>
 		</div>
 	</div>
 	<div ng-switch-when="stderr" class="full-height">
@@ -12,23 +15,20 @@
 			<pre>{{container.runtime.docker.container.log['stderr']}}</pre>
 		</perfect-scrollbar>
 		<div ng-if="!container.runtime.docker.container.log['stderr']" class="text-empty">
-			<span>{{'The logs are empty'|translate}}</span>
+			<span>
+				<i class="fa fa-eye"></i>
+				{{'The logs are empty'|translate}}
+			</span>
 		</div>
 	</div>
 </div>
 
 <div class="log-buttons">
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-6">
-				<switch ng-model="ctrl.stderr" on="stderr" off="stdout" class="white"></switch>
-			</div>
-			<div class="col-xs-6">
-				<a class="btn btn-primary pull-right" ng-click="ctrl.clearLog()">
-					<i class="fa fa-eraser"></i>
-					{{'Clear log'|translate}}
-				</a>
-			</div>
-		</div>
+		<switch ng-model="ctrl.stderr" on="stderr" off="stdout" class="white"></switch>
+		<a class="btn btn-primary pull-right" ng-click="ctrl.clearLog()">
+			<i class="fa fa-eraser"></i>
+			{{'Clear log'|translate}}
+		</a>
 	</div>
 </div>
