--- a/src/templates/container_logs.html
+++ b/src/templates/container_logs.html
@@ -25,7 +25,7 @@
 
 <div class="log-buttons">
 	<div class="container-fluid">
-		<switch ng-model="ctrl.stderr" on="stderr" off="stdout" class="white"></switch>
+		<switch ng-model="ctrl.stderr" on="stderr" off="stdout" class="color"></switch>
 		<a class="btn btn-primary pull-right" ng-click="ctrl.clearLog()">
 			<i class="fa fa-eraser"></i>
 			{{'Clear log'|translate}}
