Replaced angular-perfect-scrollbar with ng-scrollbars Removed angular-scroll-glue

--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -16,7 +16,7 @@
 
 	<div class="full-height">
 
-		<perfect-scrollbar class="scroller full-height">
+		<div class="full-height" ng-scrollbars>
 
 			<div class="container-fluid">
 
@@ -107,7 +107,7 @@
 
 			</div>
 
-		</perfect-scrollbar>
+		</div>
 
 	</div>
 
