--- a/src/templates/container_configuration.html
+++ b/src/templates/container_configuration.html
@@ -1,4 +1,4 @@
-<perfect-scrollbar class="scroller full-height">
+<div class="full-height" ng-scrollbars>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12">
@@ -128,4 +128,4 @@
 			</div>
 		</div>
 	</div>
-</perfect-scrollbar>
+</div>
